# tree-sitter-gh-actions-expressions

./: CHANGELOG.md  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  tree-sitter.json
.changeset/: better-geckos-matter.md  bitter-ties-cheat.md  brave-teeth-shake.md  breezy-geckos-grab.md  cold-ways-talk.md  common-geese-tickle.md  config.json  cool-chairs-rest.md  dry-lizards-wait.md  eighty-deer-take.md  eleven-points-change.md  every-dodos-relax.md  fair-otters-drive.md  fifty-masks-battle.md  fine-geckos-return.md  flat-showers-beg.md  fruity-chefs-speak.md  fruity-deer-shake.md  itchy-mammals-swim.md  kind-results-bet.md  kind-symbols-itch.md  large-guests-behave.md  light-gifts-sink.md  loose-islands-camp.md  modern-badgers-rule.md  nice-doodles-lick.md  pretty-shrimps-rule.md  public-aliens-think.md  public-windows-argue.md  purple-mammals-shop.md  ready-dodos-laugh.md  rotten-frogs-hammer.md  rude-guests-kick.md  shiny-showers-sort.md  short-birds-smash.md  silver-bushes-heal.md  sour-plums-learn.md  stale-buckets-push.md  stale-schools-wait.md  tall-guests-try.md  (+9 more)
.github/workflows/: ci.yml  publish.yml
bindings/c/: tree-sitter-gh-actions-expressions.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/rust/: build.rs  lib.rs
queries/: highlights.scm
scripts/: utils.sh
src/: grammar.json  node-types.json  parser.c
test/corpus/: context.test  function-call.test  literals.test  not-if-key.test  (+1 more)
(+11 files in other folders)
