[package]
name = "tree-sitter-gh-actions-expressions"
description = "Github Actions expressions grammar for tree-sitter"
version = "0.0.0"
authors = ["Héctor Ochoa <hector.ochoa.dev@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "gh-actions-expressions"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/hdoc1509/tree-sitter-gh-actions-expressions"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.6"
